[package]
name = "detour_detect"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = {version="0.6.0", features = ["serde-1"]}
clap = "3.0.5"
lazy_static = "1.4.0"